--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@wanoo21/ngx-abstract": [
+        "dist/abstract/abstract",
+        "dist/abstract"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
