--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
     "commitizen": "^4.2.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
