--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cz-conventional-changelog": "^3.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -99,5 +100,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/wanoo21/ngx-abstract.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
