--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,3 +20,6 @@ jobs:
           npm install --no-package-lock
           npm run build
       - run: npm run semantic-release
+        env: 
+          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
