--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "release": "standard-version",
     "semantic-release": "semantic-release",
-    "commit": "git-cz"
+    "commit": "git add . && git-cz"
   },
   "release": {
     "plugins": [
@@ -36,7 +36,7 @@
       [
         "@semantic-release/npm",
         {
-          "pkgRoot": "./dist/ngx-abstract"
+          "pkgRoot": "./dist/abstract"
         }
       ]
     ]
