--- a/projects/abstract/package.json
+++ b/projects/abstract/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@wanoo21/ngx-abstract",
-  "version": "0.0.2",
+  "version": "0.0.0-development",
   "peerDependencies": {
-    "@angular/common": "^11.1.2",
-    "@angular/core": "^11.1.2"
   },
   "dependencies": {
     "tslib": "^2.0.0"
