--- a/projects/abstract/package.json
+++ b/projects/abstract/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@wanoo21/ngx-abstract",
   "version": "0.0.0-development",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
   },
   "dependencies": {
