feat(utils): randomString & isObjectEmpty functions utils

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
         run: npm run build
 
       - name: Releae
+        if: success()
         run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
