--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Release
         if: success()
         run: |
-          mv README.md $LIBRARY_DIST_PATH/README.md
+          mv ./README.md $LIBRARY_DIST_PATH/README.md
           npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
