--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     env:
-      ROOT_PATH: .
-      LIBRARY_DIST_PATH: ./dist/ip-email-builder
+      LIBRARY_DIST_PATH: ./dist/abstract
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -30,7 +29,7 @@ jobs:
       - name: Release
         if: success()
         run: |
-          mv $ROOT_PATH/README.md $LIBRARY_DIST_PATH/README.md
+          mv README.md $LIBRARY_DIST_PATH/README.md
           npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
